fixing circles art in hero on mobile

--- a/SCSS/input.scss
+++ b/SCSS/input.scss
@@ -570,5 +570,9 @@
       .circ-shift {
         transform: translateY(70px);
       }
+
+      .circ-art {
+        opacity: 30%;
+      }
       
       }
